k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-amazonas-pires
  namespace: default
  labels:
    app: hospital-amazonas-pires
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx   # requer nginx ingress controller no cluster
  rules:
    - host: hospital-amazonas-pires.local   # trocar pelo seu domínio real em produção
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-amazonas-pires
                port:
                  number: 80
